Bug 1600891 - Wrap tips at narrow window widths. r=harry
Megabar automatically wraps the tip, which is nice. We just need some tweaks to make it look a little better. Non-megabar needs to have `flex-wrap: wrap` set, and I also couldn't get the wrapping to Just Work for non-small window widths. (The buttons keep wrapping when they don't need to.) So I gave up and added a `media screen and (max-width: 800px)` specifically for turning on wrapping in narrow windows. I don't feel bad about that because megabar is the future anyway.

Differential Revision: https://phabricator.services.mozilla.com/D57173

UltraBlame original commit: dd5d97bfba898564ae7823c9fdeab8dae78bb7fa

--- a/browser/themes/shared/urlbar-autocomplete.inc.css
+++ b/browser/themes/shared/urlbar-autocomplete.inc.css
@@ -780,8 +780,23 @@ tip
 padding
 -
 block
+-
+start
 :
 24px
+;
+padding
+-
+block
+-
+end
+:
+calc
+(
+24px
+-
+16px
+)
 ;
 }
 .
@@ -801,8 +816,23 @@ tip
 padding
 -
 block
+-
+start
 :
 18px
+;
+padding
+-
+block
+-
+end
+:
+calc
+(
+18px
+-
+16px
+)
 ;
 padding
 -
@@ -1291,6 +1321,34 @@ none
 .
 urlbarView
 -
+row
+:
+not
+(
+[
+type
+=
+tip
+]
+)
+>
+.
+urlbarView
+-
+row
+-
+inner
+>
+.
+urlbarView
+-
+no
+-
+wrap
+>
+.
+urlbarView
+-
 title
 [
 overflow
@@ -1319,6 +1377,34 @@ black
 )
 ;
 }
+.
+urlbarView
+-
+row
+:
+not
+(
+[
+type
+=
+tip
+]
+)
+>
+.
+urlbarView
+-
+row
+-
+inner
+>
+.
+urlbarView
+-
+no
+-
+wrap
+>
 .
 urlbarView
 -
@@ -1719,6 +1805,24 @@ inline
 end
 :
 12px
+;
+flex
+-
+basis
+:
+24px
+;
+flex
+-
+grow
+:
+0
+;
+flex
+-
+shrink
+:
+0
 ;
 }
 .
@@ -2591,6 +2695,114 @@ width
 %
 ;
 }
+media
+screen
+and
+(
+max
+-
+width
+:
+800px
+)
+{
+.
+urlbarView
+:
+not
+(
+.
+megabar
+)
+.
+urlbarView
+-
+row
+[
+type
+=
+tip
+]
+>
+.
+urlbarView
+-
+row
+-
+inner
+{
+flex
+-
+wrap
+:
+wrap
+;
+}
+}
+.
+urlbarView
+-
+row
+[
+type
+=
+tip
+]
+>
+.
+urlbarView
+-
+row
+-
+inner
+>
+.
+urlbarView
+-
+favicon
+.
+urlbarView
+-
+row
+[
+type
+=
+tip
+]
+>
+.
+urlbarView
+-
+row
+-
+inner
+>
+.
+urlbarView
+-
+title
+.
+urlbarView
+-
+tip
+-
+button
+.
+urlbarView
+-
+tip
+-
+help
+{
+margin
+-
+block
+-
+end
+:
+16px
+;
+}
 .
 urlbarView
 -
@@ -2660,6 +2872,12 @@ text
 align
 :
 center
+;
+flex
+-
+basis
+:
+initial
 ;
 flex
 -
@@ -2815,14 +3033,22 @@ button
 spacer
 {
 flex
+-
+basis
+:
+48px
+;
+flex
+-
+grow
 :
 1
 ;
-min
+flex
 -
-width
+shrink
 :
-75px
+1
 ;
 }
 .
@@ -2870,8 +3096,83 @@ space
 normal
 ;
 flex
+-
+basis
 :
-auto
+calc
+(
+100
+%
+-
+6px
+-
+24px
+-
+12px
+)
+;
+flex
+-
+grow
+:
+1
+;
+flex
+-
+shrink
+:
+1
+;
+}
+.
+urlbarView
+:
+not
+(
+.
+megabar
+)
+.
+urlbarView
+-
+row
+[
+type
+=
+tip
+]
+>
+.
+urlbarView
+-
+row
+-
+inner
+>
+.
+urlbarView
+-
+title
+{
+flex
+-
+basis
+:
+calc
+(
+100
+%
+-
+(
+12px
++
+urlbarViewIconMarginEnd
+)
+-
+24px
+-
+12px
+)
 ;
 }
 .
